--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link href="master.css" rel="stylesheet" type="text/css">
+	</head>
 <body>
 	<p>test</p>
 </body>
