--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 	<header>
 		<div id="sidebar" class="sidebar">
 			<a href="javascript:void(0)" class="close" onclick="closeSidebar()">×</a>
-			<a href="about.html">ABOUT</a>
-			<a href="skills.html">SKILLS</a>
-			<a href="projects.html">PROJECTS</a>
+			<a href="#">ABOUT</a>
+			<a href="#">SKILLS</a>
+			<a href="#">PROJECTS</a>
 			<a href="#">CV</a>
 			<a href="#">CONTACT</a>
 		</div>
