--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
 		.name h1 {
 			color: #ffffff;
 			font-family: "Source Code Pro", monospace;
-			font-size: 5em;
+			font-size: 45%;
 			font-weight: 400;
 			letter-spacing: 10px;
-			/*text-shadow: 0 0 3px #ffffff;*/
 		}
 	</style>
 </head>
