--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		.name h1 {
 			color: #ffffff;
 			font-family: "Source Code Pro", monospace;
-			font-size: 5em;
+			font-size: 100%;
 			font-weight: 400;
 			letter-spacing: 10px;
 		}
