Changed font-size for h1 to 500%

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		.name h1 {
 			color: #ffffff;
 			font-family: "Source Code Pro", monospace;
-			font-size: 100%;
+			font-size: 500%;
 			font-weight: 400;
 			letter-spacing: 10px;
 		}
@@ -55,9 +55,9 @@
 	<header>
 		<div id="sidebar" class="sidebar">
 			<a href="javascript:void(0)" class="close" onclick="closeSidebar()">×</a>
-			<a href="#">ABOUT</a>
-			<a href="#">SKILLS</a>
-			<a href="#">PROJECTS</a>
+			<a href="about.html">ABOUT</a>
+			<a href="skills.html">SKILLS</a>
+			<a href="projects.html">PROJECTS</a>
 			<a href="#">CV</a>
 			<a href="#">CONTACT</a>
 		</div>
