--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Karla&display=swap" rel="stylesheet">
+	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
 	<title>Laura Price</title>
 	<script>
@@ -28,8 +29,7 @@
 	</script>
 	<style>
 		body {
-			background-color: #000000;
-			height: 100%;
+			background-color: #000;
 		}
 
 		.name {
@@ -43,7 +43,7 @@
 		}
 
 		.name h1 {
-			color: #ffffff;
+			color: #fff;
 			font-family: "Source Code Pro", monospace;
 			font-size: 5em;
 			font-weight: 400;
