--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Karla&display=swap" rel="stylesheet">
+	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
 	<title>About</title>
 	<script>
@@ -28,8 +29,7 @@
 	</script>
 	<style>
 		body  {
-			background-color: #000000;
-			margin: 0;
+			background-color: #000;
 		}
 
 		h1.about {
@@ -40,8 +40,8 @@
 			padding: 4px 6px 4px 6px;
 			margin-top: 85px;
 			margin-right: 45px;
-			border-top: 1px solid #ffffff;
-			border-bottom: 1px solid #ffffff;
+			border-top: 1px solid #fff;
+			border-bottom: 1px solid #fff;
 			letter-spacing: 5px;
 			float: right;
 		}
@@ -53,7 +53,7 @@
 
 		.gridSection1 p {
 			display: inline-block;
-			color: #ffffff;
+			color: #fff;
 			font-family: "Karla";
 			font-size: 1em;
 			font-weight: 400;
