--- a/projects.html
+++ b/projects.html
@@ -63,14 +63,12 @@
 
 		.tabs {
 			display: inline-flex;
-			/*display: inline-block;*/
 			background-color: #000;
 			border: 1px solid #fff;
 			padding: 0px;
-			/*margin: 15px 80px 0px 80px;*/
 			margin: 15px auto 0px auto;
 			text-align: center;
-			overflow: hidden;
+			overflow: visible;
 		}
 
 		.tabs button {
@@ -97,8 +95,8 @@
 		}
 
 		.allContent {
-			/*margin: 0px 80px 0px 80px;*/
-			margin: 0px auto 0px auto;
+			margin: 0px 80px 0px 80px;
+			/*margin: 0px auto 0px auto;*/
 			border: none;
 		}
 
