--- a/projects.html
+++ b/projects.html
@@ -82,10 +82,13 @@
 
 		.tabs button:hover {
 			color: #00c25d;
+			/*font-weight: 700;*/
 		}
 
 		.tabs button.active {
 			color: #00c25d;
+			/*background-color: #fff;*/
+			/*font-weight: 700;*/
 		}
 
 		.allContent {
@@ -183,6 +186,7 @@
 	<main>
 		<h1 id="projects" class="projects"></h1>
 		<div class="tabs">
+			<!-- <button class="tab" onclick="openTab(event, 'tab0')">laurathuy.com</button> -->
 			<button class="tab" onclick="openTab(event, 'tab1')">Flask API & RethinkDB</button>
 			<button class="tab" onclick="openTab(event, 'tab2')">WriterWorkshop.com</button>
 			<button class="tab" onclick="openTab(event, 'tab3')">Web Scraping & Parsing Data</button>
@@ -191,6 +195,13 @@
 			<button class="tab" onclick="openTab(event, 'tab6')">Data Analytics Consulting Project</button>
 		</div>
 		<div class="allContent">
+<!-- 			<div id="tab0" class="tabContent">
+				<h3>laurathuy.com</h3>
+				<h4><b>Date:</b> December 2019 - Present</h4>
+				<h4><b>Emphasis:</b> Web Development, HTML Structuring, CSS / JavaScript Manipulation</h4>
+				<h4><b>Description:</b> This personal project was inspired by recently learned skills in HTML, CSS, and [vanilla] JavaScript. Built completely from scratch, this is my first attempt at producing a website. As you can see, it is still in the development stage, but feel free to navigate at the current progress.</h4>
+				<h4><b>Source Code:</b><a href="https://github.com/ltlp/website"> View</a></h4>
+			</div> -->
 			<div id="tab1" class="tabContent">
 				<h3>Flask API & RethinkDB</h3>
 				<h4><b>Date:</b> October - December 2019</h4>
@@ -235,7 +246,7 @@
 				<h4><b>Emphasis:</b> Web Development with HTML / CSS / JS</h4>
 				<h4><b>Description:</b> This group project was conducted through my Designing Graphical User Interfaces for Electronic Commerce course. It was a semester-long production emphasizing user interface design, HTML structuring, CSS implementation, and JavaScript development.</h4>
 				<h4><b>Source Code:</b><a href="https://github.com/ltlp/projects/tree/master/WriterWorkshop.com"> View</a></h4>
-				<h5><b>REPORT</b></h5>
+				<h5><b>OVERVIEW</b></h5>
 				<h6><b>WriterWorkshop.com</b></h6>
 				<p>The web application we designed is called WriterWorkshop.com. This website enables users to post their creative writing on a forum and receive feedback from other writers. It provides writers with a resource they can utilize to better their original pieces.</p>
 				<br>
@@ -247,29 +258,6 @@
 				For users who don’t want to post something but want to brainstorm or start a conversation, there is a general forum that allows writers to collaborate and discuss ideas. The goal is to create a web application that users can trust in order to bring their thoughts to light.</p>
 				<p><b><i>Provide a free, open resource.</i></b><br>
 				The altruistic approach of this web application is rooted in the fact that this is free for all users. By providing a no-pay forum that is open to the community, it allows everyone to share their writing and ideas without money being a concern.</p>
-				<br>
-				<h6><b>Brand Values</b></h6>
-				<h7><i>Primary</i></h7>
-				<ul>
-					<li><b>Creative:</b> We want users to utilize this site as a place to be inspired and to let their creative juices flow.</li>
-					<li><b>Collaborative:</b> The community is the foundation for providing our site’s content, so it is important that our users feel like they can connect with one another.</li>
-					<li><b>Open-Minded:</b> Our users should understand that their peers come from a variety of backgrounds and be accepting of the fact that this site is a place where anyone can freely express their thoughts.</li>
-				</ul>
-				<h7><i>Secondary</i></h7>
-				<ul>
-					<li><b>Helpful:</b> We want users to feel the site is a valuable resource for them in building their skills and/or writing career.</li>
-					<li><b>Honest:</b> While it is important that users remain respectful to one another, the feedback they receive should be genuine in order to be considered useful.</li>
-				</ul>
-				<br>
-				<h6><b>Logo and Fonts</b></h6>
-				<p>The logo was designed with a Modern font type, Josefin Sans, and colored with our color palette. The intent was to develop a creative, calming, and cool look that reflected our values. With the wordmarks (also written in Josefin Sans), we aimed to portray a simple and friendly design that welcomed users to the site. The font type was specifically chosen because it is not loud or bold, which would have misrepresented our intention.</p>
-				<p>For the fonts, we chose Josefin Slab for the headers because it is a simple complement to our wordmarks, which were designed in Josefin Sans. The font is not too flashy and it does not distract the user in an obnoxious or overbearing way. Lusitana was the font chosen for our primary context because of its readability, which is important since users will be reading a lot of content. Also, its Serif font type is traditionally used for body paragraphs of text. Roboto was used for navigation because of its clarity and precise lettering, which eases accessibility for our users.</p>
-				<br>
-				<h6><b>Color Palette</b></h6>
-				<p>For the color palette, we selected cool tones to achieve our goal of producing a calm, creative, friendly and professional environment. Starting with Canyon Violet, we chose this particular shade because purple signifies imagination. As most writers know, imagination is the heart of creativity, and we wanted to emphasize this value in order to bring out the best ideas in our writers.</p>
-				<p>The two shades of blue, Tahoe Teal and Banff Blue, were chosen because blue indicates calmness, peace, stability, and friendliness. In order for our community to thrive successfully, we wanted to promote a positive, open-minded, collaborative, and helpful atmosphere. These calming colors would aid in the development of trust and comfort in users when they turn to their community for help.</p>
-				<p>Our fourth color, Teton Gray, was picked to provide a cool and professional look to our site. Our goal with this shade was to add a subtle touch to the aesthetics that subconsciously enhanced our values to the users.</p>
-				<p>Lastly, our decision to name these colors after National Parks was inspired by the idea that such places provide a sense of freedom and security to visitors, as well as a sense of creative adventure. We wanted users to feel a similar inspiration when they visit and/or use our site.</p>
 				<br>
 				<h6><b>Webpages</b></h6>
 				<p>There is a master CSS file [master.css] that dictates a consistent style among every page.</p>
