--- a/skills.html
+++ b/skills.html
@@ -66,6 +66,12 @@
 			text-align: center;
 			/*border: 1px solid #ffffff;*/
 		}
+
+		.bird {
+			color: #fff;
+			margin-left: 70px;
+			text-align: left;
+		}
 	</style>
 </head>
 <body onload="typing()">
@@ -84,42 +90,8 @@
 	</header>
 	<main>
 		<h1 id="skills" class="skills"></h1>
-<!-- 		<div class="skills">
-			<div class="programming">
-				<h2>PROGRAMMING LANGUAGES</h2>
-				<div class="section1">
-					<p>Python</p>
-					<p>SQL</p>
-					<p>HTML/CSS</p>
-					<p>JavaScript</p>
-				</div>
-			</div>
-			<div class="data">
-				<h2>DATA ANALYTICS & DATABASES</h2>
-				<div class="section2">
-					<p>Power BI</p>
-					<p>Microsoft SQL Server</p>
-					<p>Jupyter Notebooks</p>
-					<p>RapidMiner</p>
-				</div>
-			</div>
-			<div class="business">
-				<h2>BUSINESS</h2>
-				<div class="section3">
-					<p>Report Development</p>
-					<p>Microsoft Office</p>
-					<p>Business Intelligence (BI)</p>
-					<p>Customer Relationship Management (CRM)</p>
-				</div>
-			</div>
-			<div class="other">
-				<h2>OTHER</h2>
-				<div class="section4">
-					<p>Linux</p>
-					<p>Information Technology</p>
-					<p>macOS</p>
-					<p>Adobe Suite</p>
-				</div> -->
+			<img src="favicon.png">
+			<p class="bird">placeholder</p>
 		</div>
 	</main>
 </body>
