--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Karla&display=swap" rel="stylesheet">
 	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="master.js"></script>
 	<title>About</title>
 	<script>
 		var i = 0;
@@ -18,14 +19,6 @@
 				setTimeout(typing, speed);
 			}
 		};
-
-		function openSidebar() {
-		  document.getElementById("sidebar").style.width = "240px";
-		};
-
-		function closeSidebar() {
-		  document.getElementById("sidebar").style.width = "0";
-		};
 	</script>
 	<style>
 		body  {
@@ -38,7 +31,7 @@
 			font-family: "Source Code Pro";
 			font-size: 2em;
 			padding: 4px 6px 4px 6px;
-			margin-top: 85px;
+			margin-top: 55px;
 			margin-right: 45px;
 			border-top: 1px solid #fff;
 			border-bottom: 1px solid #fff;
@@ -63,9 +56,7 @@
 		}
 
 		.gridSection2 {
-			display: flex;
-			align-items: center;
-			justify-content: center;
+			display: inline-block;
 			overflow: hidden;
 		}
 	</style>
