--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Karla&display=swap" rel="stylesheet">
 	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="master.js"></script>
 	<title>Laura Price</title>
 	<script>
 		var i = 0;
@@ -17,14 +18,6 @@
 				i++;
 				setTimeout(typing, speed);
 			}
-		};
-
-		function openSidebar() {
-		  document.getElementById("sidebar").style.width = "240px";
-		};
-
-		function closeSidebar() {
-		  document.getElementById("sidebar").style.width = "0";
 		};
 	</script>
 	<style>
