--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Karla&display=swap" rel="stylesheet">
 	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="master.js"></script>
 	<title>Skills</title>
 	<script>
 		var i = 0;
@@ -17,14 +18,6 @@
 				i++;
 				setTimeout(typing, speed);
 			}
-		};
-
-		function openSidebar() {
-		  document.getElementById("sidebar").style.width = "240px";
-		};
-
-		function closeSidebar() {
-		  document.getElementById("sidebar").style.width = "0";
 		};
 	</script>
 	<style>
@@ -63,6 +56,7 @@
 			grid-template-columns: 50% 50%;
 			font-family: "Karla";
 			text-align: center;
+			/*border: 1px solid #ffffff;*/
 		}
 
 		.bird {
