--- a/index.html
+++ b/index.html
@@ -6,20 +6,8 @@
 	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="master.js"></script>
+	<script type="text/javascript" src="index.js"></script>
 	<title>Laura Price</title>
-	<script>
-		var i = 0;
-		var text = "LAURA PRICE";
-		var speed = 60;
-
-		function typing() {
-			if (i < text.length) {
-				document.getElementById("laura").innerHTML += text.charAt(i);
-				i++;
-				setTimeout(typing, speed);
-			}
-		};
-	</script>
 	<style>
 		body {
 			background-color: #000;
