Separation of JS

--- a/about.html
+++ b/about.html
@@ -6,20 +6,8 @@
 	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="master.js"></script>
+	<script type="text/javascript" src="about.js"></script>
 	<title>About</title>
-	<script>
-		var i = 0;
-		var text = "ABOUT";
-		var speed = 85;
-
-		function typing() {
-			if (i < text.length) {
-				document.getElementById("about").innerHTML += text.charAt(i);
-				i++;
-				setTimeout(typing, speed);
-			}
-		};
-	</script>
 	<style>
 		body  {
 			background-color: #000;
