--- a/skills.html
+++ b/skills.html
@@ -6,20 +6,8 @@
 	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="master.js"></script>
+	<script type="text/javascript" src="skills.js"></script>
 	<title>Skills</title>
-	<script>
-		var i = 0;
-		var text = "SKILLS";
-		var speed = 85;
-
-		function typing() {
-			if (i < text.length) {
-				document.getElementById("skills").innerHTML += text.charAt(i);
-				i++;
-				setTimeout(typing, speed);
-			}
-		};
-	</script>
 	<style>
 		body {
 			background-color: #000;
@@ -56,7 +44,6 @@
 			grid-template-columns: 50% 50%;
 			font-family: "Karla";
 			text-align: center;
-			/*border: 1px solid #ffffff;*/
 		}
 
 		.bird {
