Separation of JS

--- a/projects.html
+++ b/projects.html
@@ -6,21 +6,9 @@
 	<link rel="icon" href="favicon.png">
 	<link href="master.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="master.js"></script>
+	<script type="text/javascript" src="projects.js"></script>
 	<title>Projects</title>
-	<script>
-		var i = 0;
-		var text = "PROJECTS";
-		var speed = 85;
-		
-		function typing() {
-			if (i < text.length) {
-				document.getElementById("projects").innerHTML += text.charAt(i);
-				i++;
-				setTimeout(typing, speed);
-			}
-		};
-	</script>
-	<style>
+		<style>
 		body {
 			background-color: #000;
 		}
