--- a/projects.html
+++ b/projects.html
@@ -71,17 +71,16 @@
 		<h1 id="projects" class="projects"></h1>
 		<div class="allButtons">
 			<div class="gridContainer">
-				<button onclick="openFlaskInfo()">Flask API & RethinkDB</button>
-				<button onclick="openWriterInfo()">WriterWorkshop.com</button>
-				<button onclick="openWebInfo()">Web Scraping & Parsing Data</button>
-				<button onclick="openKpiInfo()">KPI Dashboard</button>
-				<button onclick="openPstrmiInfo()">PSTRMI</button>
-				<button onclick="openDataInfo()">Data Analytics Consulting Project</button>
+				<button onclick="openFlaskInfo();closeWriterInfo();closeWebInfo();closeKpiInfo();closePstrmiInfo();closeDataInfo()">Flask API & RethinkDB</button>
+				<button onclick="openWriterInfo();closeFlaskInfo();closeWebInfo();closeKpiInfo();closePstrmiInfo();closeDataInfo()">WriterWorkshop.com</button>
+				<button onclick="openWebInfo();closeFlaskInfo();closeWriterInfo();closeKpiInfo();closePstrmiInfo();closeDataInfo()">Web Scraping & Parsing Data</button>
+				<button onclick="openKpiInfo();closeFlaskInfo();closeWriterInfo();closeWebInfo();closePstrmiInfo();closeDataInfo()">KPI Dashboard</button>
+				<button onclick="openPstrmiInfo();closeFlaskInfo();closeWriterInfo();closeWebInfo();closeKpiInfo();closeDataInfo()">PSTRMI</button>
+				<button onclick="openDataInfo();closeFlaskInfo();closeWriterInfo();closeWebInfo();closeKpiInfo();closePstrmiInfo()">Data Analytics Consulting Project</button>
 			</div>
 		</div>
 		<div class="projectInfo">
 			<div id="flaskInfo" class="projectInfo">
-				<a href="javascript:void(0)" class="close" onclick="closeFlaskInfo()">×</a>
 				<h3>Flask API & RethinkDB</h3>
 				<h4><b>Date:</b> October - December 2019</h4>
 				<h4><b>Emphasis:</b> Data Acquisition, Data Persistence, Data API Programming</h4>
@@ -120,7 +119,6 @@
 				<p>To view the Flask API and receive the URL address for the data, type this in the browser: <span>http://127.0.0.1:5001/</span></p>
 			</div>
 			<div id="writerInfo" class="projectInfo">
-				<a href="javascript:void(0)" class="close" onclick="closeWriterInfo()">×</a>
 				<h3>WriterWorkshop.com</h3>
 				<h4><b>Date:</b> September - December 2019</h4>
 				<h4><b>Emphasis:</b> Web Development with HTML / CSS / JS</h4>
@@ -156,21 +154,18 @@
 				</ul>
 			</div>
 			<div id="webInfo" class="projectInfo">
-				<a href="javascript:void(0)" class="close" onclick="closeWebInfo()">×</a>
 				<h3>Web Scraping & Parsing Data</h3>
 				<h4><b>Date:</b> September - October 2019</h4>
 				<h4><b>Emphasis:</b> Web Scraping, Data Parsing</h4>
 				<h4><b>Description:</b></h4>
 			</div>
 			<div id="kpiInfo" class="projectInfo">
-				<a href="javascript:void(0)" class="close" onclick="closeKpiInfo()">×</a>
 				<h3>KPI Dashboard</h3>
 				<h4><b>Date:</b> May - August 2019</h4>
 				<h4><b>Emphasis:</b> Business Intelligence (BI), Report Development, Database Administration</h4>
 				<h4><b>Description:</b></h4>
 			</div>
 			<div id="pstrmiInfo" class="projectInfo">
-				<a href="javascript:void(0)" class="close" onclick="closePstrmiInfo()">×</a>
 				<h3>PSTRMI</h3>
 				<h4><b>Date:</b> January - April 2019</h4>
 				<h4><b>Emphasis:</b> Project Management, Database Administration, Application Development</h4>
@@ -213,7 +208,6 @@
 				orders and user error when data is inputted into the inventory system.</p>
 			</div>
 			<div id="dataInfo" class="projectInfo">
-				<a href="javascript:void(0)" class="close" onclick="closeDataInfo()">×</a>
 				<h3>Data Analytics Consulting Project</h3>
 				<h4><b>Date:</b> August - December 2017</h4>
 				<h4><b>Emphasis:</b> Big Data Analytics, Data Modeling, Business Intelligence (BI)</h4>
