--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 		  z-index: -1;
 		}
 
-		.name h1 {
+		h1.laura {
 			color: #fff;
-			font-family: "Source Code Pro", monospace;
 			font-size: 5em;
 			font-weight: 400;
 			letter-spacing: 10px;
@@ -38,7 +37,7 @@
 			<a href="javascript:void(0)" class="close" onclick="closeSidebar()">×</a>
 			<a href="about.html">ABOUT</a>
 			<a href="projects.html">PROJECTS</a>
-			<a href="#">CV</a>
+			<a href="cv.html">CV</a>
 			<a href="#">CONTACT</a>
 		</div>
 		<div class="menuButton">
@@ -47,7 +46,7 @@
 	</header>
 	<main>
 		<div class="name">
-			<h1 id="laura"></h1>
+			<h1 id="laura" class="laura"></h1>
 		</div>
 	</main>
 </body>
